# Regal

./: .gitignore  CMakeLists.txt  README.md  pusher.ps1
.gitpriv/: COMMIT_EDITMSG  index
.gitpriv/logs/: HEAD
.gitpub/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  index
.gitpub/logs/: HEAD
B-plus-plus/: README.md
LangDef/: CFG.txt  __init__.py  langdef.hpp  setup.py  test.cpp  tokenlist.txt
LangDef/BppLanguageDefinition.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
LangDef/Evaluating/: BppEval.py
LangDef/Evaluator/: evaluator.cpp  evaluator.hpp
LangDef/Lexer/: lexer.cpp
LangDef/Lexing/: BppLexer.py  BppTokensREADME.txt  lexer.c  lexer.cpp  tokenfuns.c  tokenfuns.h  tokenlist.txt  tokens.h  tokens.hpp
LangDef/Optimizer/: static_optimizer.cpp  static_optimizer.hpp
LangDef/Parser/: parser testing.cpp  parser.cpp  parser.hpp  parser_copy.hpp
LangDef/Parsing/: BppCFG.txt  BppParser.py  ParseHelpers.py
LangDef/Testing/: CustomTesting.py
LangDef/Types/: BppTypes.py  __init__.py
LangDefOLD/EvaluatingOLD/: BppEval.py  __init__.py
LangDefOLD/LexingOLD/: BppLexer.py  BppTokensREADME.txt
LangDefOLD/ParsingOLD/: BppParser.py  ParseHelpers.py  (+1 more)
Testing/: LangDefTesting.py  parser_testing.cpp
TestingOLD/: LangDefTesting.py
include/: stdio.hpp
new_pground/: playground.py
personal_folder/: multiline_playground.cpp  nutsCODE.txt  syntax testing.txt  teeets.cpp
playground/: interpret_code.cpp  interpreter.cpp  plagroundOLD.cpp  playground.cpp  playground.py  tempCodeRunnerFile.cpp
release_build/: playground.py
stdlib/: stdio.hpp
(+67 files in other folders)
